added window.gtag = gtag;

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
+  window.gtag = gtag;
   gtag('config', 'G-QGNKX4LR39');
 </script>
     <title>Paul Hill Portfolio</title>
